fix: page overflow-y, and cursor pointer mismatch

--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,8 @@ h3,
 		--ring: 240 4.9% 83.9%;
 
 		--radius: 0.5rem;
+
+		overflow: hidden;
 	}
 
 	.dark {
@@ -70,5 +72,9 @@ h3,
 
 	body {
 		@apply bg-background text-foreground;
+	}
+
+	button{
+		@apply cursor-pointer;
 	}
 }
